tests/snapshots/r#mod__property__ical-10.snap
---
source: tests/mod.rs
expression: prop
---
name: BEGIN
params: ContentLineParams([])
value: "VALARM"
