tests/snapshots/r#mod__property__ical-12.snap
---
source: tests/mod.rs
expression: prop
---
name: END
params: ContentLineParams([])
value: "VALARM"
