tests/snapshots/r#mod__property__ical-16.snap
---
source: tests/mod.rs
expression: prop
---
name: PRODID
params: ContentLineParams([])
value: "-//Example Inc.//Example Calendar//EN"
