tests/snapshots/r#mod__property__ical-18.snap
---
source: tests/mod.rs
expression: prop
---
name: ATTENDEE
params: ContentLineParams([("DELEGATED-TO", ["mailto:foo7@bar", "mailto:foo8@bar"]), ("CN", ["Foo, Bar"])])
value: "mailto:foo1@bar"
