tests/snapshots/r#mod__property__ical-20.snap
---
source: tests/mod.rs
expression: prop
---
name: ATTENDEE
params: ContentLineParams([("CN", ["Foo, Bar"])])
value: "mailto:foo3@bar"
