tests/snapshots/r#mod__property__ical-22.snap
---
source: tests/mod.rs
expression: prop
---
name: ATTENDEE
params: ContentLineParams([("DELEGATED-TO", ["mailto:foo7@bar"]), ("CN", ["Foo, Bar"])])
value: "mailto:foo5@bar"
