tests/snapshots/r#mod__property__ical-24.snap
---
source: tests/mod.rs
expression: prop
---
name: ATTENDEE
params: ContentLineParams([("ROLE", ["REQ-PARTICIPANT;foo"]), ("DELEGATED-FROM", ["mailto:bar@baz.com"]), ("PARTSTAT", ["ACCEPTED"]), ("RSVP", ["TRUE"])])
value: "mailto:foo@bar.com"
